--- a/order/templates/order/order_invoice.html
+++ b/order/templates/order/order_invoice.html
@@ -17,13 +17,13 @@
         <h4 class="font-weight-light mb-3">{{order.city}}, {{order.credit_card}}</h4>
         <h5 class="font-weight-light mb-4">Placed on {{order.created}}</h5>
         <hr />
-        <table class="table table-striped mt-4">
-            <thead class="table-dark">
+        <table class="table table-striped table-hover ">
+            <thead>
                 <tr>
-                    <td>Tên </td>
-                    <td>Đơn giá</td>
-                    <td>Số lượng</td>
-                    <td>Tổng </td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>quantity</td>
+                    <td>Total</td>
                 </tr>
             </thead>
             <tbody>
@@ -39,7 +39,7 @@
             <tfoot>
                 <tr>
                     <td colspan="2"></td>
-                    <td class="text-right">Tổng tiền -</td>
+                    <td class="text-right">Total </td>
                     <td>
                         <b>{{order.total_price}}VNĐ</b>
                     </td>
@@ -47,16 +47,16 @@
             </tfoot>
         </table>
         <h5>
-            Trạng thái thanh toán - {% if order.paid %}
-            <span class="badge badge-success">đã thanh toán</span> {% else %}
-            <span class="badge badge-danger">Đang chờ thanh toán</span> {% endif %}
+            Payment: {% if order.paid %}
+            <span class="badge badge-success" style="background-color: #7fad39;">Paid</span> {% else %}
+            <span class="badge badge-danger" style="background-color: #7fad39;">Not Paid</span> {% endif %}
         </h5>
-        <h5>Phương thức thanh toán - Thanh toán khi giao hàng</h5>
-        <h5>Trạng thái - {{order.status}}</h5>
+
+        <h5>Status {{order.status}}</h5>
     </div>
     <footer class="text-center d-print-none">
-        <button class="btn btn-primary" onclick="window.print()">In </button>
-        <button class="btn btn-danger" onclick="history.back()">Trở lại</button>
+        <button class="btn" onclick="window.print()" style="background-color: #7fad39; color:white;">Print </button>
+        <button class="btn" onclick="history.back()" style="background-color: #7fad39; color:white;">Back</button>
     </footer>
 </body>
 
