update readme and requirements

--- a/templates/homepage/navbar.html
+++ b/templates/homepage/navbar.html
@@ -11,9 +11,11 @@
     </div>
     <div class="humberger__menu__cart">
         <ul>
-            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>0</span></a></li>
+            <li><a href="{% url 'cart_app:cart_details' %}"><i class="fa fa-shopping-bag"></i> <span> {{request.session.cart.keys|length}}</span></a></li>
         </ul>
-        <div class="header__cart__price">item: <span>0</span></div>
+        <div class="header__cart__price">item: <span>
+                {{request.session.cart.keys|length}}
+            </span></div>
     </div>
     <div class="humberger__menu__widget">
 
@@ -39,18 +41,17 @@
     </div>
     <nav class="humberger__menu__nav mobile-menu">
         <ul>
-            <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./shop-grid.html">Shop</a></li>
+            <li><a href="{% url 'core_app:index' %}">Home</a></li>
+            <li><a href="{% url 'product_app:product' %}">Product</a></li>
             <li><a href="#">Pages</a>
                 <ul class="header__menu__dropdown">
-                    <li><a href="./shop-details.html">Shop Details</a></li>
-                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                    <li><a href="./checkout.html">Check Out</a></li>
-                    <li><a href="./blog-details.html">Blog Details</a></li>
+                    <li><a href="{% url 'cart_app:cart_details' %}">Shoping Cart</a></li>
+                    <li><a href="{% url 'order_app:checkout' %}">CheckOut</a></li>
+                    <li><a href="{% url 'order_app:my_orders' %}">My Order List</a></li>
                 </ul>
             </li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="{% url 'core_app:fb_view' %}">Feedback</a></li>
+            <li><a href="{% url 'core_app:contacts' %}">Contact</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
