--- a/user/templates/Register/register.html
+++ b/user/templates/Register/register.html
@@ -3,7 +3,7 @@
 
 
 
-<div class="Register">
+<div class="Register" style="background: #add374;">
     <form action="" method="post">
         {% csrf_token %}
         <h2 style="text-align: center; margin-bottom:10px; ">Register</h2>
