--- a/product/templates/product/product_details.html
+++ b/product/templates/product/product_details.html
@@ -30,7 +30,7 @@
                             </div>
                         </div>
                         <input type="hidden" name="product_id" value="{{ pd.id }}" />
-                        <button type="submit" class="primary-btn">ADD TO CARD</button>
+                        <button type="submit" class="primary-btn">ADD TO CART</button>
 
                     </form>
 
