--- a/templates/homepage/navbar.html
+++ b/templates/homepage/navbar.html
@@ -61,8 +61,8 @@
     </div>
     <div class="humberger__menu__contact">
         <ul>
-            <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-            <li>Free Shipping for all Order of $99</li>
+            <li><i class="fa fa-envelope"></i> aha@gmail.com</li>
+            <li>Free Shipping for all Order of 250k</li>
         </ul>
     </div>
 </div>
